<?xml version="1.0"?>
<package format="3">
  <name>canopen_chain_node</name>
  <version>0.8.1</version>
  <description>Base implementation for CANopen chains node with support for management services and diagnostics</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <license>LGPLv3</license>

  <url type="website">http://wiki.ros.org/canopen_chain_node</url>
  <url type="repository">https://github.com/ros-industrial/ros_canopen</url>
  <url type="bugtracker">https://github.com/ros-industrial/ros_canopen/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>class_loader</depend>
  <depend>ament_index_cpp</depend>

  <depend>canopen_master</depend>
  <depend>diagnostic_updater</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>socketcan_interface</depend> <!-- direct dependency needed for pluginlib look-up -->
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>canopen_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
