<?xml version="1.0"?>
<package format="2">
  <name>canopen_chain_node</name>
  <version>0.8.5</version>
  <description>Base implementation for CANopen chains node with support for management services and diagnostics</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <license>LGPLv3</license>

  <url type="website">http://wiki.ros.org/canopen_chain_node</url>
  <url type="repository">https://github.com/ros-industrial/ros_canopen</url>
  <url type="bugtracker">https://github.com/ros-industrial/ros_canopen/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>libboost-dev</depend>
  <depend>libboost-filesystem-dev</depend>
  <depend>canopen_master</depend>
  <depend>diagnostic_updater</depend>
  <depend>pluginlib</depend>
  <depend>rosconsole_bridge</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>socketcan_interface</depend> <!-- direct dependency needed for pluginlib look-up -->
  <depend>std_srvs</depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
