<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>canopen_fake_slaves</name>
  <version>0.0.0</version>
  <description>Package with mock canopen slave</description>
  <maintainer email="cmh@ipa.fraunhofer.de">Christoph Hellmann Santos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lely_core_libraries</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
