<?xml version="1.0"?>
<package format="2">
  <name>canopen_master</name>
  <version>0.8.2</version>
  <description>CiA(r) CANopen 301 master implementation with support for interprocess master synchronisation.</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <license>LGPLv3</license>

  <url type="website">http://wiki.ros.org/canopen_master</url>
  <url type="repository">https://github.com/ros-industrial/ros_canopen</url>
  <url type="bugtracker">https://github.com/ros-industrial/ros_canopen/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>class_loader</depend>
  <depend>socketcan_interface</depend>

  <test_depend>rosunit</test_depend>

  <export>
    <canopen_master plugin="${prefix}/master_plugin.xml" />
  </export>
</package>
